--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ http = "0.2.8"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 tower = "0.4"
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "migrate" ] }
+serde = { version = "1", features = ["derive"]}
 
 
 [dev-dependencies]
